--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://usuario:contraseña@servidor:puerto/basededatos
-DJANGO_SECRET_KEY=tuclaveultrasecreta
+DATABASE_URL=postgresql://prueba_db_evun_user:qzHG6uxKq1hKdNMXhy0wCCBZJvLfTIqv%40dpg-cv4jjn5ds78s73dvfs00-a.oregon-postgres.render.com/prueba_db_evun
+DJANGO_SECRET_KEY='django-insecure-_e=p$(%894rd=@s2&42%0kn3dj@q3p25)wpc)%audy@!ni*w8v'
 DEBUG=False
